--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
             <version>4.9</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
